--- a/utilities/scss/main.css
+++ b/utilities/scss/main.css
@@ -9527,6 +9527,11 @@ body {
   background: #6464648a;
 }
 
+.btn {
+  padding: 0.375rem 1.5rem;
+  font-weight: bold;
+}
+
 textarea.form-control, .form-control, .btn, .dropdown-menu {
   font-size: 14px;
 }
@@ -9553,6 +9558,21 @@ label {
   padding: 10px 20px;
 }
 
+textarea::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #DCDDE1;
+}
+
+textarea::-webkit-scrollbar {
+  width: 7px;
+  background-color: #DCDDE1;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(47, 54, 64, 0.4);
+}
+
 .table th, .table td {
   vertical-align: middle;
   border-bottom: 1px solid #dee2e6;
@@ -9564,6 +9584,7 @@ label {
 
 .breadcrumb {
   background: transparent;
+  padding-left: 0px;
 }
 .breadcrumb li + li:before {
   display: inline-block;
@@ -9842,6 +9863,10 @@ ul.list-unstyled.fw-light li a:hover {
   white-space: nowrap;
 }
 
+.navbar-collapse {
+  flex-grow: 1;
+}
+
 td.btn-collapse {
   width: 35%;
 }
@@ -9987,7 +10012,6 @@ td.btn-collapse {
 }
 .navbar-collapse {
   flex-basis: inherit;
-  flex-grow: inherit;
   align-items: center;
   display: flex;
 }
@@ -9996,6 +10020,10 @@ td.btn-collapse {
 }
 .navbar-collapse .mr-5 {
   margin: 0 !important;
+}
+
+.breadcrumb {
+  margin-top: 70px;
 }
 
 @media screen and (min-device-width: 320px) and (max-device-width: 480px) {
@@ -10169,6 +10197,10 @@ td.btn-collapse {
 
   .action-btn button, .btn-collapse {
     width: 100% !important;
+  }
+
+  .breadcrumb {
+    margin-top: 50px;
   }
 }
 
